<resources>
    <string name="app_name">NoteApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Поделиться</string>
    <string name="menu_gallery">Настройки</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="severelectro">Джаркынбек уулу Эрлан
</string>
    <string name="se">ОАО "Северэлектро"</string>
    <string name="supportr">SUPPORT</string>
    <string name="developen">О разработчиках</string>
    <string name="power">Выход</string>
    <string name="title">Нужно сделать:</string>
    <string name="search">Поиск заметок</string>
    <string name="ready">Готово</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Skip">Пропустить</string>
    <string name="functional">Очень удобный функционал</string>
    <string name="functional2">Куча функций и интересных фишек</string>
    <string name="product">Быстрый, качественный продукт</string>
    <string name="go">Начать работу</string>
    <string name="title_dialog">ВНИМАНИЕ</string>
    <string name="message">ТОЧНО УДАЛИТЬ????</string>

</resources>