<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/settings_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/empty"
            android:title=" "/>
        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/outline_24"
            android:title="@string/developen"/>
        <item
            android:id="@+id/nav_power"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/power"/>
    </group>

</menu>