<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.noteapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_noteFragment"
            app:destination="@id/noteFragment"
            app:enterAnim="@anim/anim2"
            app:exitAnim="@anim/anim1"
            app:popEnterAnim="@anim/anim1"
            app:popExitAnim="@anim/anim2" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.noteapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.noteapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/noteFragment"
        android:name="com.example.noteapp.ui.note.NoteFragment"
        android:label="fragment_note"
        tools:layout="@layout/fragment_note" >

    </fragment>
    <fragment
        android:id="@+id/onBoardFragment"
        android:name="com.example.noteapp.onBoard.OnBoardFragment"
        android:label="fragment_on_board"
        tools:layout="@layout/fragment_on_board" >
        <action
            android:id="@+id/action_onBoardFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/firstFragment"
        android:name="com.example.noteapp.onBoard.FirstFragment"
        android:label="fragment_first"
        tools:layout="@layout/fragment_first" />
    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.noteapp.onBoard.SecondFragment"
        android:label="fragment_second"
        tools:layout="@layout/fragment_second" />
    <fragment
        android:id="@+id/thirdFragment"
        android:name="com.example.noteapp.onBoard.ThirdFragment"
        android:label="fragment_third"
        tools:layout="@layout/fragment_third" />
</navigation>